<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.ceibasoftware.hiringtest.jespitiaa.model.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.UserPostsFragment">

        <include
            android:id="@+id/includedLayout"
            layout="@layout/user_item"
            app:user="@{user}"
            app:showPublicationsBtn="@{false}"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/post_item" />
    </LinearLayout>
</layout>