<resources>
    <string name="app_name">Hiring Test</string>
    <string name="app_title">Prueba de ingreso</string>
    <!-- Strings used for fragments for navigation -->
    <string name="user_posts_button">VER PUBLICACIONES</string>
    <string name="user_search_label">Buscar usuario</string>
    <string name="empty_list_label">List is empty</string>
</resources>